@@ -653,6 +653,8 @@ NotUpdatableReason.7=Result Set not updatable (does not reference all primary ke
 PacketTooBigException.0=Packet for query is too large ({0} > {1}). You can change this value on the server by setting the ''max_allowed_packet'' variable.
 PacketTooBigException.1=Packet for query is too large ({0} > {1}). You can change this value on the server by setting the ''mysqlx_max_allowed_packet'' variable.
 
+XSession.0=Parameter ''{0}'' must not be null or empty.
+
 SQLError.35=Disconnect error
 SQLError.36=Data truncated
 SQLError.37=Privilege not revoked
